--- a/src/scss/apex_components/_cards.scss
+++ b/src/scss/apex_components/_cards.scss
@@ -1,29 +1,29 @@
 // /* Colors */
-// .ab-card-btn-primary .ab-card-btn {
+// .ft-card-btn-primary .ft-card-btn {
 //     @extend .btn-primary;
 // }
 //
-// .ab-card-btn-secondary .ab-card-btn {
+// .ft-card-btn-secondary .ft-card-btn {
 //     @extend .btn-secondary;
 // }
 //
-// .ab-card-btn-success .ab-card-btn {
+// .ft-card-btn-success .ft-card-btn {
 //     @extend .btn-success;
 // }
 //
-// .ab-card-btn-info .ab-card-btn {
+// .ft-card-btn-info .ft-card-btn {
 //     @extend .btn-info;
 // }
 //
-// .ab-card-btn-warning .ab-card-btn {
+// .ft-card-btn-warning .ft-card-btn {
 //     @extend .btn-warning;
 // }
 //
-// .ab-card-btn-danger .ab-card-btn {
+// .ft-card-btn-danger .ft-card-btn {
 //     @extend .btn-danger;
 // }
 //
-// .ab-card-btn-link .ab-card-btn {
+// .ft-card-btn-link .ft-card-btn {
 //     @extend .btn-link;
 // }
 //
@@ -45,60 +45,60 @@
 //     @include img-fluid();
 // }
 //
-// .ab-card-img-top img {
+// .ft-card-img-top img {
 //     @extend .card-img-top;
 // }
 //
-// .ab-card-img-bottom img {
+// .ft-card-img-bottom img {
 //     @extend .card-img-bottom;
 // }
 //
-// .ab-card-img-overlay > .card-block {
+// .ft-card-img-overlay > .card-block {
 //     @extend .card-img-overlay;
 // }
 //
 // /* Titles */
-// .ab-region-title-hidden > .card-title {
+// .ft-region-title-hidden > .card-title {
 //     @include hide();
 // }
 //
-// .ab-h1 > .card-title {
+// .ft-h1 > .card-title {
 //     @extend .h1;
 // }
 //
-// .ab-h2 > .card-title {
+// .ft-h2 > .card-title {
 //     @extend .h2;
 // }
 //
-// .ab-h3 > .card-title {
+// .ft-h3 > .card-title {
 //     @extend .h3;
 // }
 //
-// .ab-h4 > .card-title {
+// .ft-h4 > .card-title {
 //     @extend .h4;
 // }
 //
-// .ab-h5 > .card-title {
+// .ft-h5 > .card-title {
 //     @extend .h5;
 // }
 //
-// .ab-h6 > .card-title {
+// .ft-h6 > .card-title {
 //     @extend .h6;
 // }
 //
-// .ab-display-1 > .card-title {
+// .ft-display-1 > .card-title {
 //     @extend .display-1;
 // }
 //
-// .ab-display-2 > .card-title {
+// .ft-display-2 > .card-title {
 //     @extend .display-2;
 // }
 //
-// .ab-display-3 > .card-title {
+// .ft-display-3 > .card-title {
 //     @extend .display-3;
 // }
 //
-// .ab-display-4 > .card-title {
+// .ft-display-4 > .card-title {
 //     @extend .display-4;
 // }
 //
