--- a/src/scss/apex_components/_images.scss
+++ b/src/scss/apex_components/_images.scss
@@ -1,9 +1,9 @@
-// .ab-image-fluid img {
+// .ft-image-fluid img {
 //     @include img-fluid();
 // }
 //
-// .ab-image {
-//     &.ab-figure {
+// .ft-image {
+//     &.ft-figure {
 //         @extend figure;
 //         @extend .figure;
 //     }
