--- a/src/scss/apex_components/_tables.scss
+++ b/src/scss/apex_components/_tables.scss
@@ -6,18 +6,18 @@
 //     }
 // }
 //
-// .ab-table-bordered .table {
+// .ft-table-bordered .table {
 //     @extend .table-bordered;
 // }
 //
-// .ab-table-hover .table {
+// .ft-table-hover .table {
 //     @extend .table-hover;
 // }
 //
-// .ab-table-sm .table {
+// .ft-table-sm .table {
 //     @extend .table-sm;
 // }
 //
-// .ab-table-striped .table {
+// .ft-table-striped .table {
 //     @extend .table-striped;
 // }
