--- a/templates/Buttons/~global.template.options.hbs
+++ b/templates/Buttons/~global.template.options.hbs
@@ -1,580 +1,7 @@
-{
-  "TEMPLATE_OPTIONS": [
-    {
-      "NAME": "FULL_WIDTH",
-      "DISPLAY_NAME": "Full Width",
-      "DISPLAY_SEQUENCE": 1,
-      "CSS_CLASSES": "btn-block",
-      "HELP_TEXT": "Create block level buttons—those that span the full width of a parent"
-    }
-  ],
-  "TEMPLATE_OPTION_GROUPS": [
-    {
-      "NAME": "BUTTON_DROPDOWN_BEHAVIOR",
-      "DISPLAY_NAME": "Button Dropdown Behavior",
-      "DISPLAY_SEQUENCE": 20,
-      "HELP_TEXT": "Single Button Dropdown or Split Button Dropdown. Button must be nested inside a list with \"Button Dropdown\" template.",
-      "NULL_TEXT": "None",
-      "IS_ADVANCED": "N",
-      "TEMPLATE_OPTIONS": [
-        {
-          "NAME": "SINGLE_BUTTON_DROPDOWN",
-          "DISPLAY_NAME": "Single Button Dropdown",
-          "DISPLAY_SEQUENCE": 1,
-          "CSS_CLASSES": "ab-single-button-dropdown"
-        },
-        {
-          "NAME": "SPLIT_BUTTON_DROPDOWN",
-          "DISPLAY_NAME": "Split Button Dropdown",
-          "DISPLAY_SEQUENCE": 2,
-          "CSS_CLASSES": "ab-split-button-dropdown"
-        }
-      ]
-    },
-    {
-      "NAME": "BUTTON_FLOAT",
-      "DISPLAY_NAME": "Float",
-      "DISPLAY_SEQUENCE": 80,
-      "HELP_TEXT": "Apply float to your button (Left, Right, None)",
-      "NULL_TEXT": "None",
-      "IS_ADVANCED": "Y",
-      "TEMPLATE_OPTIONS": [
-        {
-          "NAME": "BUTTON_XS_FLOAT_LEFT",
-          "DISPLAY_NAME": "Left",
-          "DISPLAY_SEQUENCE": 1,
-          "CSS_CLASSES": "pull-xs-left",
-          "HELP_TEXT": "Float left on all viewport sizes"
-        },
-        {
-          "NAME": "BUTTON_XS_FLOAT_CENTER",
-          "DISPLAY_NAME": "Center",
-          "DISPLAY_SEQUENCE": 2,
-          "CSS_CLASSES": "center-block",
-          "HELP_TEXT": "Float center on all viewport sizes"
-        },
-        {
-          "NAME": "BUTTON_XS_FLOAT_RIGHT",
-          "DISPLAY_NAME": "Right",
-          "DISPLAY_SEQUENCE": 3,
-          "CSS_CLASSES": "pull-xs-right",
-          "HELP_TEXT": "Float right on all viewport sizes"
-        },
-        {
-          "NAME": "BUTTON_XS_FLOAT_NONE",
-          "DISPLAY_NAME": "None",
-          "DISPLAY_SEQUENCE": 0,
-          "CSS_CLASSES": "pull-xs-none",
-          "HELP_TEXT": "Don't float on all viewport sizes"
-        }
-      ]
-    },
-    {
-      "NAME": "BUTTON_HELP_TYPE",
-      "DISPLAY_NAME": "Help Type",
-      "DISPLAY_SEQUENCE": 90,
-      "HELP_TEXT": "Tooltip or Popover.",
-      "NULL_TEXT": "None",
-      "IS_ADVANCED": "Y",
-      "TEMPLATE_OPTIONS": [
-        {
-          "NAME": "BUTTON_TOOLTIP",
-          "DISPLAY_NAME": "Tooltip",
-          "DISPLAY_SEQUENCE": 1,
-          "CSS_CLASSES": "ab-button-tooltip"
-        },
-        {
-          "NAME": "BUTTON_POPOVER",
-          "DISPLAY_NAME": "Popover",
-          "DISPLAY_SEQUENCE": 2,
-          "CSS_CLASSES": "ab-button-popover"
-        }
-      ]
-    },
-    {
-      "NAME": "BUTTON_HIDE_DOWN",
-      "DISPLAY_NAME": "Hide Content Down From",
-      "DISPLAY_SEQUENCE": 801,
-      "HELP_TEXT": "The \"Hide Content Down From\" template option hides the element when the viewport is at the given breakpoint or smaller. For example, choosing \"Medium\" hides an element on extra-small, small, and medium viewports.",
-      "IS_ADVANCED": "Y",
-      "TEMPLATE_OPTIONS": [
-        {
-          "NAME": "HIDDEN-XS-DOWN",
-          "DISPLAY_NAME": "X-Small",
-          "DISPLAY_SEQUENCE": 1,
-          "CSS_CLASSES": "hidden-xs-down"
-        },
-        {
-          "NAME": "HIDDEN-SM-DOWN",
-          "DISPLAY_NAME": "Small",
-          "DISPLAY_SEQUENCE": 2,
-          "CSS_CLASSES": "hidden-sm-down"
-        },
-        {
-          "NAME": "HIDDEN-MD-DOWN",
-          "DISPLAY_NAME": "Medium",
-          "DISPLAY_SEQUENCE": 3,
-          "CSS_CLASSES": "hidden-md-down"
-        },
-        {
-          "NAME": "HIDDEN-LG-DOWN",
-          "DISPLAY_NAME": "Large",
-          "DISPLAY_SEQUENCE": 4,
-          "CSS_CLASSES": "hidden-lg-down"
-        },
-        {
-          "NAME": "HIDDEN-XL-DOWN",
-          "DISPLAY_NAME": "X-Large",
-          "DISPLAY_SEQUENCE": 5,
-          "CSS_CLASSES": "hidden-xl-down"
-        }
-      ]
-    },
-    {
-      "NAME": "BUTTON_HIDE_UP",
-      "DISPLAY_NAME": "Hide Content Up To",
-      "DISPLAY_SEQUENCE": 800,
-      "HELP_TEXT": "The \"Hide Content Up To\" template option hides the element when the viewport is at the given breakpoint or wider. For example, choosing \"Medium\" hides an element on medium, large, and extra-large viewports.",
-      "IS_ADVANCED": "Y",
-      "TEMPLATE_OPTIONS": [
-        {
-          "NAME": "HIDDEN-XS-UP",
-          "DISPLAY_NAME": "X-Small",
-          "DISPLAY_SEQUENCE": 1,
-          "CSS_CLASSES": "hidden-xs-up"
-        },
-        {
-          "NAME": "HIDDEN-SM-UP",
-          "DISPLAY_NAME": "Small",
-          "DISPLAY_SEQUENCE": 2,
-          "CSS_CLASSES": "hidden-sm-up"
-        },
-        {
-          "NAME": "HIDDEN-MD-UP",
-          "DISPLAY_NAME": "Medium",
-          "DISPLAY_SEQUENCE": 3,
-          "CSS_CLASSES": "hidden-md-up"
-        },
-        {
-          "NAME": "HIDDEN-LG-UP",
-          "DISPLAY_NAME": "Large",
-          "DISPLAY_SEQUENCE": 4,
-          "CSS_CLASSES": "hidden-lg-up"
-        },
-        {
-          "NAME": "HIDDEN-XL-UP",
-          "DISPLAY_NAME": "X-Large",
-          "DISPLAY_SEQUENCE": 5,
-          "CSS_CLASSES": "hidden-xl-up"
-        }
-      ]
-    },
-    {
-      "NAME": "BUTTON_MARGIN_BOTTOM",
-      "DISPLAY_NAME": "Margin bottom",
-      "DISPLAY_SEQUENCE": 901,
-      "HELP_TEXT": "Apply \"Margin bottom\" to any element with a template option.",
-      "IS_ADVANCED": "Y",
-      "TEMPLATE_OPTIONS": [
-        {
-          "NAME": "BUTTON_MARGINBOT0",
-          "DISPLAY_NAME": 0,
-          "DISPLAY_SEQUENCE": 0,
-          "CSS_CLASSES": "m-b-0"
-        },
-        {
-          "NAME": "BUTTON_MARGINBOT1",
-          "DISPLAY_NAME": 1,
-          "DISPLAY_SEQUENCE": 1,
-          "CSS_CLASSES": "m-b-1"
-        },
-        {
-          "NAME": "BUTTON_MARGINBOT2",
-          "DISPLAY_NAME": 2,
-          "DISPLAY_SEQUENCE": 2,
-          "CSS_CLASSES": "m-b-2"
-        },
-        {
-          "NAME": "BUTTON_MARGINBOT3",
-          "DISPLAY_NAME": 3,
-          "DISPLAY_SEQUENCE": 3,
-          "CSS_CLASSES": "m-b-3"
-        }
-      ]
-    },
-    {
-      "NAME": "BUTTON_MARGIN_LEFT",
-      "DISPLAY_NAME": "Margin left",
-      "DISPLAY_SEQUENCE": 903,
-      "HELP_TEXT": "Apply \"Margin left\" to any element with a template option.",
-      "IS_ADVANCED": "Y",
-      "TEMPLATE_OPTIONS": [
-        {
-          "NAME": "BUTTON_MARGINLEFT0",
-          "DISPLAY_NAME": 0,
-          "DISPLAY_SEQUENCE": 0,
-          "CSS_CLASSES": "m-l-0"
-        },
-        {
-          "NAME": "BUTTON_MARGINLEFT1",
-          "DISPLAY_NAME": 1,
-          "DISPLAY_SEQUENCE": 1,
-          "CSS_CLASSES": "m-l-1"
-        },
-        {
-          "NAME": "BUTTON_MARGINLEFT2",
-          "DISPLAY_NAME": 2,
-          "DISPLAY_SEQUENCE": 2,
-          "CSS_CLASSES": "m-l-2"
-        },
-        {
-          "NAME": "BUTTON_MARGINLEFT3",
-          "DISPLAY_NAME": 3,
-          "DISPLAY_SEQUENCE": 3,
-          "CSS_CLASSES": "m-l-3"
-        }
-      ]
-    },
-    {
-      "NAME": "BUTTON_MARGIN_RIGHT",
-      "DISPLAY_NAME": "Margin right",
-      "DISPLAY_SEQUENCE": 902,
-      "HELP_TEXT": "Apply \"Margin right\" to any element with a template option.",
-      "IS_ADVANCED": "Y",
-      "TEMPLATE_OPTIONS": [
-        {
-          "NAME": "BUTTON_MARGINRIGHT0",
-          "DISPLAY_NAME": 0,
-          "DISPLAY_SEQUENCE": 0,
-          "CSS_CLASSES": "m-r-0"
-        },
-        {
-          "NAME": "BUTTON_MARGINRIGHT1",
-          "DISPLAY_NAME": 1,
-          "DISPLAY_SEQUENCE": 1,
-          "CSS_CLASSES": "m-r-1"
-        },
-        {
-          "NAME": "BUTTON_MARGINRIGHT2",
-          "DISPLAY_NAME": 2,
-          "DISPLAY_SEQUENCE": 2,
-          "CSS_CLASSES": "m-r-2"
-        },
-        {
-          "NAME": "BUTTON_MARGINRIGHT3",
-          "DISPLAY_NAME": 3,
-          "DISPLAY_SEQUENCE": 3,
-          "CSS_CLASSES": "m-r-3"
-        }
-      ]
-    },
-    {
-      "NAME": "BUTTON_MARGIN_TOP",
-      "DISPLAY_NAME": "Margin top",
-      "DISPLAY_SEQUENCE": 900,
-      "HELP_TEXT": "Apply \"Margin top\" to any element with a template option.",
-      "IS_ADVANCED": "Y",
-      "TEMPLATE_OPTIONS": [
-        {
-          "NAME": "BUTTON_MARGINTOP0",
-          "DISPLAY_NAME": 0,
-          "DISPLAY_SEQUENCE": 0,
-          "CSS_CLASSES": "m-t-0"
-        },
-        {
-          "NAME": "BUTTON_MARGINTOP1",
-          "DISPLAY_NAME": 1,
-          "DISPLAY_SEQUENCE": 1,
-          "CSS_CLASSES": "m-t-1"
-        },
-        {
-          "NAME": "BUTTON_MARGINTOP2",
-          "DISPLAY_NAME": 2,
-          "DISPLAY_SEQUENCE": 2,
-          "CSS_CLASSES": "m-t-2"
-        },
-        {
-          "NAME": "BUTTON_MARGINTOP3",
-          "DISPLAY_NAME": 3,
-          "DISPLAY_SEQUENCE": 3,
-          "CSS_CLASSES": "m-t-3"
-        }
-      ]
-    },
-    {
-      "NAME": "BUTTON_PADDING_BOTTOM",
-      "DISPLAY_NAME": "Padding bottom",
-      "DISPLAY_SEQUENCE": 911,
-      "HELP_TEXT": "Apply \"Padding bottom\" to any element with a template option.",
-      "IS_ADVANCED": "Y",
-      "TEMPLATE_OPTIONS": [
-        {
-          "NAME": "BUTTON_PADDINGBOT0",
-          "DISPLAY_NAME": 0,
-          "DISPLAY_SEQUENCE": 0,
-          "CSS_CLASSES": "p-b-0"
-        },
-        {
-          "NAME": "BUTTON_PADDINGBOT1",
-          "DISPLAY_NAME": 1,
-          "DISPLAY_SEQUENCE": 1,
-          "CSS_CLASSES": "p-b-1"
-        },
-        {
-          "NAME": "BUTTON_PADDINGBOT2",
-          "DISPLAY_NAME": 2,
-          "DISPLAY_SEQUENCE": 2,
-          "CSS_CLASSES": "p-b-2"
-        },
-        {
-          "NAME": "BUTTON_PADDINGBOT3",
-          "DISPLAY_NAME": 3,
-          "DISPLAY_SEQUENCE": 3,
-          "CSS_CLASSES": "p-b-3"
-        }
-      ]
-    },
-    {
-      "NAME": "BUTTON_PADDING_LEFT",
-      "DISPLAY_NAME": "Padding left",
-      "DISPLAY_SEQUENCE": 913,
-      "HELP_TEXT": "Apply \"Padding left\" to any element with a template option.",
-      "IS_ADVANCED": "Y",
-      "TEMPLATE_OPTIONS": [
-        {
-          "NAME": "BUTTON_PADDINGLEFT0",
-          "DISPLAY_NAME": 0,
-          "DISPLAY_SEQUENCE": 0,
-          "CSS_CLASSES": "p-l-0"
-        },
-        {
-          "NAME": "BUTTON_PADDINGLEFT1",
-          "DISPLAY_NAME": 1,
-          "DISPLAY_SEQUENCE": 1,
-          "CSS_CLASSES": "p-l-1"
-        },
-        {
-          "NAME": "BUTTON_PADDINGLEFT2",
-          "DISPLAY_NAME": 2,
-          "DISPLAY_SEQUENCE": 2,
-          "CSS_CLASSES": "p-l-2"
-        },
-        {
-          "NAME": "BUTTON_PADDINGLEFT3",
-          "DISPLAY_NAME": 3,
-          "DISPLAY_SEQUENCE": 3,
-          "CSS_CLASSES": "p-l-3"
-        }
-      ]
-    },
-    {
-      "NAME": "BUTTON_PADDING_RIGHT",
-      "DISPLAY_NAME": "Padding right",
-      "DISPLAY_SEQUENCE": 912,
-      "HELP_TEXT": "Apply \"Padding right\" to any element with a template option.",
-      "IS_ADVANCED": "Y",
-      "TEMPLATE_OPTIONS": [
-        {
-          "NAME": "BUTTON_PADDINGRIGHT0",
-          "DISPLAY_NAME": 0,
-          "DISPLAY_SEQUENCE": 0,
-          "CSS_CLASSES": "p-r-0"
-        },
-        {
-          "NAME": "BUTTON_PADDINGRIGHT1",
-          "DISPLAY_NAME": 1,
-          "DISPLAY_SEQUENCE": 1,
-          "CSS_CLASSES": "p-r-1"
-        },
-        {
-          "NAME": "BUTTON_PADDINGRIGHT2",
-          "DISPLAY_NAME": 2,
-          "DISPLAY_SEQUENCE": 2,
-          "CSS_CLASSES": "p-r-2"
-        },
-        {
-          "NAME": "BUTTON_PADDINGRIGHT3",
-          "DISPLAY_NAME": 3,
-          "DISPLAY_SEQUENCE": 3,
-          "CSS_CLASSES": "p-r-3"
-        }
-      ]
-    },
-    {
-      "NAME": "BUTTON_PADDING_TOP",
-      "DISPLAY_NAME": "Padding top",
-      "DISPLAY_SEQUENCE": 910,
-      "HELP_TEXT": "Apply \"Padding top\" to any element with a template option.",
-      "IS_ADVANCED": "Y",
-      "TEMPLATE_OPTIONS": [
-        {
-          "NAME": "BUTTON_PADDINGTOP0",
-          "DISPLAY_NAME": 0,
-          "DISPLAY_SEQUENCE": 0,
-          "CSS_CLASSES": "p-t-0"
-        },
-        {
-          "NAME": "BUTTON_PADDINGTOP1",
-          "DISPLAY_NAME": 1,
-          "DISPLAY_SEQUENCE": 1,
-          "CSS_CLASSES": "p-t-1"
-        },
-        {
-          "NAME": "BUTTON_PADDINGTOP2",
-          "DISPLAY_NAME": 2,
-          "DISPLAY_SEQUENCE": 2,
-          "CSS_CLASSES": "p-t-2"
-        },
-        {
-          "NAME": "BUTTON_PADDINGTOP3",
-          "DISPLAY_NAME": 3,
-          "DISPLAY_SEQUENCE": 3,
-          "CSS_CLASSES": "p-t-3"
-        }
-      ]
-    },
-    {
-      "NAME": "BUTTON_PRINT_UTILITIES",
-      "DISPLAY_NAME": "Print Utilities",
-      "DISPLAY_SEQUENCE": 802,
-      "HELP_TEXT": "Use these for toggling content for print.",
-      "IS_ADVANCED": "Y",
-      "TEMPLATE_OPTIONS": [
-        {
-          "NAME": "VISIBLE-PRINT-BLOCK",
-          "DISPLAY_NAME": "Visible Print Block",
-          "DISPLAY_SEQUENCE": 1,
-          "CSS_CLASSES": "visible-print-block"
-        },
-        {
-          "NAME": "VISIBLE-PRINT-INLINE",
-          "DISPLAY_NAME": "Visible Print Inline",
-          "DISPLAY_SEQUENCE": 2,
-          "CSS_CLASSES": "visible-print-inline"
-        },
-        {
-          "NAME": "VISIBLE-PRINT-INLINE-BLOCK",
-          "DISPLAY_NAME": "Visible Inline Block",
-          "DISPLAY_SEQUENCE": 3,
-          "CSS_CLASSES": "visible-print-inline-block"
-        },
-        {
-          "NAME": "HIDDEN-PRINT",
-          "DISPLAY_NAME": "Hidden",
-          "DISPLAY_SEQUENCE": 4,
-          "CSS_CLASSES": "hidden-print"
-        }
-      ]
-    },
-    {
-      "NAME": "BUTTON_SIZE",
-      "DISPLAY_NAME": "Size",
-      "DISPLAY_SEQUENCE": 20,
-      "HELP_TEXT": "Apply a size for your button (Large, Default, Small)",
-      "NULL_TEXT": "Default",
-      "IS_ADVANCED": "N",
-      "TEMPLATE_OPTIONS": [
-        {
-          "NAME": "LARGE",
-          "DISPLAY_NAME": "Large",
-          "DISPLAY_SEQUENCE": 2,
-          "CSS_CLASSES": "btn-lg"
-        },
-        {
-          "NAME": "SMALL",
-          "DISPLAY_NAME": "Small",
-          "DISPLAY_SEQUENCE": 1,
-          "CSS_CLASSES": "btn-sm"
-        }
-      ]
-    },
-    {
-      "NAME": "BUTTON_STYLE",
-      "DISPLAY_NAME": "Style",
-      "DISPLAY_SEQUENCE": 10,
-      "HELP_TEXT": "Apply a style for your button (Primary, Secondary, Success, Info, Warning, Danger)",
-      "IS_ADVANCED": "N",
-      "TEMPLATE_OPTIONS": [
-        {
-          "NAME": "PRIMARY",
-          "DISPLAY_NAME": "Primary",
-          "DISPLAY_SEQUENCE": 1,
-          "CSS_CLASSES": "btn-primary",
-          "HELP_TEXT": "Provides extra visual weight and identifies the primary action in a set of buttons."
-        },
-        {
-          "NAME": "SUCCESS",
-          "DISPLAY_NAME": "Success",
-          "DISPLAY_SEQUENCE": 3,
-          "CSS_CLASSES": "btn-success"
-        },
-        {
-          "NAME": "INFO",
-          "DISPLAY_NAME": "Info",
-          "DISPLAY_SEQUENCE": 4,
-          "CSS_CLASSES": "btn-info"
-        },
-        {
-          "NAME": "LINK",
-          "DISPLAY_NAME": "Link",
-          "DISPLAY_SEQUENCE": 1,
-          "CSS_CLASSES": "btn-link"
-        },
-        {
-          "NAME": "PRIMARY_OUTLINE",
-          "DISPLAY_NAME": "Primary Outline",
-          "DISPLAY_SEQUENCE": 7,
-          "CSS_CLASSES": "btn-primary-outline"
-        },
-        {
-          "NAME": "SECONDARY_OUTLINE",
-          "DISPLAY_NAME": "Secondary Outline",
-          "DISPLAY_SEQUENCE": 8,
-          "CSS_CLASSES": "btn-secondary-outline"
-        },
-        {
-          "NAME": "WARNING_OUTLINE",
-          "DISPLAY_NAME": "Warning Outline",
-          "DISPLAY_SEQUENCE": 11,
-          "CSS_CLASSES": "btn-warning-outline"
-        },
-        {
-          "NAME": "DANGER_OUTLINE",
-          "DISPLAY_NAME": "Danger Outline",
-          "DISPLAY_SEQUENCE": 12,
-          "CSS_CLASSES": "btn-danger-outline"
-        },
-        {
-          "NAME": "SECONDARY",
-          "DISPLAY_NAME": "Secondary",
-          "DISPLAY_SEQUENCE": 2,
-          "CSS_CLASSES": "btn-secondary"
-        },
-        {
-          "NAME": "WARNING",
-          "DISPLAY_NAME": "Warning",
-          "DISPLAY_SEQUENCE": 5,
-          "CSS_CLASSES": "btn-warning"
-        },
-        {
-          "NAME": "DANGER",
-          "DISPLAY_NAME": "Danger",
-          "DISPLAY_SEQUENCE": 6,
-          "CSS_CLASSES": "btn-danger"
-        },
-        {
-          "NAME": "SUCCESS_OUTLINE",
-          "DISPLAY_NAME": "Success Outline",
-          "DISPLAY_SEQUENCE": 9,
-          "CSS_CLASSES": "btn-success-outline"
-        },
-        {
-          "NAME": "INFO_OUTLINE",
-          "DISPLAY_NAME": "Info Outline",
-          "DISPLAY_SEQUENCE": 10,
-          "CSS_CLASSES": "btn-info-outline"
-        }
-      ]
-    }
-  ]
-}
+{{#template_option_groups}}
+[]
+{{/template_option_groups}}
+
+{{#template_options}}
+[]
+{{/template_options}}
