--- a/templates/Lists/~global.template.options.hbs
+++ b/templates/Lists/~global.template.options.hbs
@@ -1,194 +1,7 @@
-{
-  "TEMPLATE_OPTIONS": [],
-  "TEMPLATE_OPTION_GROUPS": [
-    {
-      "NAME": "LIST_BG_COLOR",
-      "DISPLAY_NAME": "Background Color",
-      "DISPLAY_SEQUENCE": 1,
-      "HELP_TEXT": "Similar to the contextual text color classes, easily set the background of an element to any contextual class. Anchor components will darken on hover, just like the text classes.",
-      "IS_ADVANCED": "N",
-      "TEMPLATE_OPTIONS": [
-        {
-          "NAME": "LIST_BG_SECONDARY",
-          "DISPLAY_NAME": "Secondary",
-          "DISPLAY_SEQUENCE": 2,
-          "CSS_CLASSES": "bg-secondary"
-        },
-        {
-          "NAME": "LIST_BG_DARK",
-          "DISPLAY_NAME": "Dark",
-          "DISPLAY_SEQUENCE": 8,
-          "CSS_CLASSES": "bg-dark"
-        },
-        {
-          "NAME": "LIST_BG_WARNING",
-          "DISPLAY_NAME": "Warning",
-          "DISPLAY_SEQUENCE": 5,
-          "CSS_CLASSES": "bg-warning"
-        },
-        {
-          "NAME": "LIST_BG_SUCCESS",
-          "DISPLAY_NAME": "Success",
-          "DISPLAY_SEQUENCE": 3,
-          "CSS_CLASSES": "bg-success"
-        },
-        {
-          "NAME": "LIST_BG_INFO",
-          "DISPLAY_NAME": "Info",
-          "DISPLAY_SEQUENCE": 6,
-          "CSS_CLASSES": "bg-info"
-        },
-        {
-          "NAME": "LIST_BG_LIGHT",
-          "DISPLAY_NAME": "Light",
-          "DISPLAY_SEQUENCE": 7,
-          "CSS_CLASSES": "bg-light"
-        },
-        {
-          "NAME": "LIST_BG_WHITE",
-          "DISPLAY_NAME": "White",
-          "DISPLAY_SEQUENCE": 9,
-          "CSS_CLASSES": "bg-white"
-        },
-        {
-          "NAME": "LIST_BG_PRIMARY",
-          "DISPLAY_NAME": "Primary",
-          "DISPLAY_SEQUENCE": 1,
-          "CSS_CLASSES": "bg-primary"
-        },
-        {
-          "NAME": "LIST_BG_DANGER",
-          "DISPLAY_NAME": "Danger",
-          "DISPLAY_SEQUENCE": 4,
-          "CSS_CLASSES": "bg-danger"
-        }
-      ]
-    },
-    {
-      "NAME": "LIST_BG_GRADIENT_COLOR",
-      "DISPLAY_NAME": "Background Gradient",
-      "DISPLAY_SEQUENCE": 3,
-      "HELP_TEXT": "When $enable-gradients is set to true, you’ll be able to use .bg-gradient- utility classes.",
-      "IS_ADVANCED": "Y",
-      "TEMPLATE_OPTIONS": [
-        {
-          "NAME": "LIST_BG_GRADIENT_PRIMARY",
-          "DISPLAY_NAME": "Primary",
-          "DISPLAY_SEQUENCE": 1,
-          "CSS_CLASSES": "bg-gradient-primary"
-        },
-        {
-          "NAME": "LIST_BG_GRADIENT_SUCCESS",
-          "DISPLAY_NAME": "Success",
-          "DISPLAY_SEQUENCE": 3,
-          "CSS_CLASSES": "bg-gradient-success"
-        },
-        {
-          "NAME": "LIST_BG_GRADIENT_WARNING",
-          "DISPLAY_NAME": "Warning",
-          "DISPLAY_SEQUENCE": 5,
-          "CSS_CLASSES": "bg-gradient-warning"
-        },
-        {
-          "NAME": "LIST_BG_GRADIENT_DANGER",
-          "DISPLAY_NAME": "Danger",
-          "DISPLAY_SEQUENCE": 4,
-          "CSS_CLASSES": "bg-gradient-danger"
-        },
-        {
-          "NAME": "LIST_BG_GRADIENT_LIGHT",
-          "DISPLAY_NAME": "Light",
-          "DISPLAY_SEQUENCE": 7,
-          "CSS_CLASSES": "bg-gradient-light"
-        },
-        {
-          "NAME": "LIST_BG_GRADIENT_DARK",
-          "DISPLAY_NAME": "Dark",
-          "DISPLAY_SEQUENCE": 8,
-          "CSS_CLASSES": "bg-gradient-dark"
-        },
-        {
-          "NAME": "LIST_BG_GRADIENT_SECONDARY",
-          "DISPLAY_NAME": "Secondary",
-          "DISPLAY_SEQUENCE": 2,
-          "CSS_CLASSES": "bg-gradient-secondary"
-        },
-        {
-          "NAME": "LIST_BG_GRADIENT_INFO",
-          "DISPLAY_NAME": "Info",
-          "DISPLAY_SEQUENCE": 6,
-          "CSS_CLASSES": "bg-gradient-info"
-        }
-      ]
-    },
-    {
-      "NAME": "LIST_TEXT_COLOR",
-      "DISPLAY_NAME": "Text Color",
-      "DISPLAY_SEQUENCE": 1,
-      "HELP_TEXT": "Set the color of an element to any contextual class.",
-      "IS_ADVANCED": "N",
-      "TEMPLATE_OPTIONS": [
-        {
-          "NAME": "LIST_TEXT_DANGER",
-          "DISPLAY_NAME": "Danger",
-          "DISPLAY_SEQUENCE": 4,
-          "CSS_CLASSES": "text-danger"
-        },
-        {
-          "NAME": "LIST_TEXT_LIGHT",
-          "DISPLAY_NAME": "Light",
-          "DISPLAY_SEQUENCE": 7,
-          "CSS_CLASSES": "text-light"
-        },
-        {
-          "NAME": "LIST_TEXT_PRIMARY",
-          "DISPLAY_NAME": "Primary",
-          "DISPLAY_SEQUENCE": 1,
-          "CSS_CLASSES": "text-primary"
-        },
-        {
-          "NAME": "LIST_TEXT_SUCCESS",
-          "DISPLAY_NAME": "Success",
-          "DISPLAY_SEQUENCE": 3,
-          "CSS_CLASSES": "text-success"
-        },
-        {
-          "NAME": "LIST_TEXT_DARK",
-          "DISPLAY_NAME": "Dark",
-          "DISPLAY_SEQUENCE": 8,
-          "CSS_CLASSES": "text-dark"
-        },
-        {
-          "NAME": "LIST_TEXT_WHITE",
-          "DISPLAY_NAME": "White",
-          "DISPLAY_SEQUENCE": 10,
-          "CSS_CLASSES": "text-white"
-        },
-        {
-          "NAME": "LIST_TEXT_SECONDARY",
-          "DISPLAY_NAME": "Secondary",
-          "DISPLAY_SEQUENCE": 2,
-          "CSS_CLASSES": "text-secondary"
-        },
-        {
-          "NAME": "LIST_TEXT_WARNING",
-          "DISPLAY_NAME": "Warning",
-          "DISPLAY_SEQUENCE": 5,
-          "CSS_CLASSES": "text-warning"
-        },
-        {
-          "NAME": "LIST_TEXT_INFO",
-          "DISPLAY_NAME": "Info",
-          "DISPLAY_SEQUENCE": 6,
-          "CSS_CLASSES": "text-info"
-        },
-        {
-          "NAME": "LIST_TEXT_MUTED",
-          "DISPLAY_NAME": "Muted",
-          "DISPLAY_SEQUENCE": 9,
-          "CSS_CLASSES": "text-muted"
-        }
-      ]
-    }
-  ]
-}
+{{#template_option_groups}}
+[]
+{{/template_option_groups}}
+
+{{#template_options}}
+[]
+{{/template_options}}
