--- a/templates/Regions/Blank.hbs
+++ b/templates/Regions/Blank.hbs
@@ -1,5 +1,5 @@
 {{#template}}
-<div id="#REGION_STATIC_ID#" class="ab-region ab-blank #REGION_CSS_CLASSES#" #REGION_ATTRIBUTES#> #BODY# #SUB_REGIONS#</div>
+<div id="#REGION_STATIC_ID#" class="ft-region ft-blank #REGION_CSS_CLASSES#" #REGION_ATTRIBUTES#> #BODY# #SUB_REGIONS#</div>
 
 {{/template}}
 {{#sub_plug_header_template}}
