--- a/templates/Regions/Jumbotron.hbs
+++ b/templates/Regions/Jumbotron.hbs
@@ -1,30 +1,30 @@
 {{#template}}
-<div id="#REGION_STATIC_ID#" class="ab-region jumbotron d-flex flex-row justify-content-between #REGION_CSS_CLASSES#" #REGION_ATTRIBUTES#>
-	<div class="ab-region-left align-self-center mr-2">#PREVIOUS#</div>
+<div id="#REGION_STATIC_ID#" class="ft-region jumbotron d-flex flex-row justify-content-between #REGION_CSS_CLASSES#" #REGION_ATTRIBUTES#>
+	<div class="ft-region-left align-self-center mr-2">#PREVIOUS#</div>
 
-	<div class="ab-region-center w-100">
-		<div class="ab-region-header d-flex flex-row">
-			<div class="ab-region-left w-100">
-				<div class="ab-region-title"><i class="#ICON_CSS_CLASSES#"></i>#TITLE#</div>
+	<div class="ft-region-center w-100">
+		<div class="ft-region-header d-flex flex-row">
+			<div class="ft-region-left w-100">
+				<div class="ft-region-title"><i class="#ICON_CSS_CLASSES#"></i>#TITLE#</div>
 			</div>
-			<div class="ab-region-right">#EDIT#</div>
+			<div class="ft-region-right">#EDIT#</div>
 		</div>
 
-		<div class="ab-region-buttons d-flex flex-row justify-content-between">
-			<div class="ab-region-left">#COPY#</div>
-			<div class="ab-region-right">#EXPAND#</div>
+		<div class="ft-region-buttons d-flex flex-row justify-content-between">
+			<div class="ft-region-left">#COPY#</div>
+			<div class="ft-region-right">#EXPAND#</div>
 		</div>
 
-		<div class="ab-region-body t-Region-body">#BODY##SUB_REGIONS#</div>
+		<div class="ft-region-body t-Region-body">#BODY##SUB_REGIONS#</div>
 
-		<div class="ab-region-buttons d-flex flex-row justify-content-between">
-			<div class="ab-region-left">#CLOSE##HELP#</div>
-			<div class="ab-region-center">#CHANGE#</div>
-			<div class="ab-region-right">#DELETE##CREATE##CREATE2#</div>
+		<div class="ft-region-buttons d-flex flex-row justify-content-between">
+			<div class="ft-region-left">#CLOSE##HELP#</div>
+			<div class="ft-region-center">#CHANGE#</div>
+			<div class="ft-region-right">#DELETE##CREATE##CREATE2#</div>
 		</div>
 	</div>
 
-	<div class="ab-region-right align-self-center ml-2">#NEXT#</div>
+	<div class="ft-region-right align-self-center ml-2">#NEXT#</div>
 </div>
 {{/template}}
 {{#sub_plug_header_template}}
@@ -58,7 +58,7 @@
 			"name": "JUMBOTRON_MASTER",
 			"display_name": "Jumbotron Master",
 			"display_sequence": 3,
-			"css_classes": "ab-jumbotron-jumbo",
+			"css_classes": "ft-jumbotron-jumbo",
 			"help_text": "Make it even bigger!"
 		}
 	]
