--- a/templates/ReportNamedColumns/Cards.hbs
+++ b/templates/ReportNamedColumns/Cards.hbs
@@ -7,7 +7,7 @@
 {{/before_column_heading}}
 
 	{{#column_heading_template}}
-	
+
 	{{/column_heading_template}}
 
 {{#after_column_heading}}
@@ -15,48 +15,48 @@
 {{/after_column_heading}}
 
 	{{#row_template_before_first}}
-	
+
 	{{/row_template_before_first}}
 
 		{{#row_template1}}
-		<div class="col-xs-12 ab-card-columns"><div class="card bg-#CARD_STYLE#"> <img src="#IMG_SRC#" alt="#IMG_ALT#"><div class="card-block"><h4 class="card-title">#CARD_TITLE#</h4><h6 class="card-subtitle text-muted">#CARD_SUBTITLE#</h6><blockquote class="card-text">#CARD_TEXT#</blockquote> <a href="#CARD_LINK1#" class="btn ab-card-btn card-link">#CARD_LINK_LABEL1#</a> <a href="#CARD_LINK2#" class="btn ab-card-btn card-link">#CARD_LINK_LABEL2#</a></div></div></div>
+		<div class="col-xs-12 ft-card-columns"><div class="card bg-#CARD_STYLE#"> <img src="#IMG_SRC#" alt="#IMG_ALT#"><div class="card-block"><h4 class="card-title">#CARD_TITLE#</h4><h6 class="card-subtitle text-muted">#CARD_SUBTITLE#</h6><blockquote class="card-text">#CARD_TEXT#</blockquote> <a href="#CARD_LINK1#" class="btn ft-card-btn card-link">#CARD_LINK_LABEL1#</a> <a href="#CARD_LINK2#" class="btn ft-card-btn card-link">#CARD_LINK_LABEL2#</a></div></div></div>
 		{{/row_template1}}
 		{{#row_template_condition1}}
-		
+
 		{{/row_template_condition1}}
 		{{#row_template_display_cond1}}
-		
+
 		{{/row_template_display_cond1}}
 		{{#row_template2}}
-		
+
 		{{/row_template2}}
 		{{#row_template_condition2}}
-		
+
 		{{/row_template_condition2}}
 		{{#row_template_display_cond2}}
-		
+
 		{{/row_template_display_cond2}}
 		{{#row_template3}}
-		
+
 		{{/row_template3}}
 		{{#row_template_condition3}}
-		
+
 		{{/row_template_condition3}}
 		{{#row_template_display_cond3}}
-		
+
 		{{/row_template_display_cond3}}
 		{{#row_template4}}
-		
+
 		{{/row_template4}}
 		{{#row_template_condition4}}
-		
+
 		{{/row_template_condition4}}
 		{{#row_template_display_cond4}}
-		
+
 		{{/row_template_display_cond4}}
 
 	{{#row_template_after_last}}
-	
+
 	{{/row_template_after_last}}
 
 {{#row_template_after_rows}}
@@ -80,90 +80,7 @@
 {{/previous_set_template}}
 
 {{#template_option_groups}}
-[
-  {
-    "NAME": "CARD_BUTTON_COLORS",
-    "DISPLAY_NAME": "Card Button Colors",
-    "DISPLAY_SEQUENCE": 1,
-    "IS_ADVANCED": "N",
-    "TEMPLATE_OPTIONS": [
-      {
-        "NAME": "CARD_BTN_PRIMARY",
-        "DISPLAY_NAME": "Primary",
-        "DISPLAY_SEQUENCE": 1,
-        "CSS_CLASSES": "ab-card-btn-primary"
-      },
-      {
-        "NAME": "CARD_BTN_SECONDARY",
-        "DISPLAY_NAME": "Secondary",
-        "DISPLAY_SEQUENCE": 2,
-        "CSS_CLASSES": "ab-card-btn-secondary"
-      },
-      {
-        "NAME": "CARD_BTN_SUCCESS",
-        "DISPLAY_NAME": "Success",
-        "DISPLAY_SEQUENCE": 3,
-        "CSS_CLASSES": "ab-card-btn-success"
-      },
-      {
-        "NAME": "CARD_BTN_INFO",
-        "DISPLAY_NAME": "Info",
-        "DISPLAY_SEQUENCE": 4,
-        "CSS_CLASSES": "ab-card-btn-info"
-      },
-      {
-        "NAME": "CARD_BTN_WARNING",
-        "DISPLAY_NAME": "Warning",
-        "DISPLAY_SEQUENCE": 5,
-        "CSS_CLASSES": "ab-card-btn-warning"
-      },
-      {
-        "NAME": "CARD_BTN_DANGER",
-        "DISPLAY_NAME": "Danger",
-        "DISPLAY_SEQUENCE": 6,
-        "CSS_CLASSES": "ab-card-btn-danger"
-      },
-      {
-        "NAME": "CARD_BTN_INVERSE",
-        "DISPLAY_NAME": "Inverse",
-        "DISPLAY_SEQUENCE": 7,
-        "CSS_CLASSES": "ab-card-btn-inverse"
-      },
-      {
-        "NAME": "CARD_BTN_LINK",
-        "DISPLAY_NAME": "Link",
-        "DISPLAY_SEQUENCE": 8,
-        "CSS_CLASSES": "ab-card-btn-link"
-      }
-    ]
-  },
-  {
-    "NAME": "CARD_IMAGE_POSITION",
-    "DISPLAY_NAME": "Card Image Position",
-    "DISPLAY_SEQUENCE": 1,
-    "IS_ADVANCED": "N",
-    "TEMPLATE_OPTIONS": [
-      {
-        "NAME": "CARD_IMAGE_TOP",
-        "DISPLAY_NAME": "Card Image Top",
-        "DISPLAY_SEQUENCE": 1,
-        "CSS_CLASSES": "ab-card-img-top"
-      },
-      {
-        "NAME": "CARD_IMAGE_BOTTOM",
-        "DISPLAY_NAME": "Card Image Bottom",
-        "DISPLAY_SEQUENCE": 2,
-        "CSS_CLASSES": "ab-card-img-bottom"
-      },
-      {
-        "NAME": "CARD_IMAGE_OVERLAY",
-        "DISPLAY_NAME": "Card Image Overlay",
-        "DISPLAY_SEQUENCE": 3,
-        "CSS_CLASSES": "ab-card-img-overlay"
-      }
-    ]
-  }
-]
+[]
 {{/template_option_groups}}
 
 {{#template_options}}
