--- a/src/scss/apex_components/_footer.scss
+++ b/src/scss/apex_components/_footer.scss
@@ -1,4 +1,4 @@
-// .ab-footer {
+// .ft-footer {
 //     ul {
 //         padding-left: 0;
 //         margin-bottom: 1rem;
@@ -18,7 +18,7 @@
 //         margin-bottom: 0;
 //     }
 //
-//     .ab-region {
+//     .ft-region {
 //         margin-top: 0;
 //         margin-bottom: 0;
 //     }
