--- a/src/scss/apex_components/_jumbotron.scss
+++ b/src/scss/apex_components/_jumbotron.scss
@@ -1,30 +1,30 @@
 // jumbotron fluid
-.jumbotron.jumbotron-fluid > .ab-region-center {
+.jumbotron.jumbotron-fluid > .ft-region-center {
 	@include make-container();
 	@include make-container-max-widths();
 }
 
 // jumbotron master
 @include media-breakpoint-up(sm) {
-	.jumbotron.ab-jumbotron-jumbo {
+	.jumbotron.ft-jumbotron-jumbo {
 		padding-top: 8rem!important;
 		padding-bottom: 6rem!important;
 		margin-bottom: 0;
 
-		& .ab-region-body,
-		& .ab-region-body p {
+		& .ft-region-body,
+		& .ft-region-body p {
 			font-size: 1.5rem;
 		}
 	}
 }
 
 @include media-breakpoint-up(md) {
-	.jumbotron.ab-jumbotron-jumbo {
+	.jumbotron.ft-jumbotron-jumbo {
 		padding-top: 10rem!important;
 		padding-bottom: 8rem!important;
 
-		& .ab-region-body,
-		& .ab-region-body p {
+		& .ft-region-body,
+		& .ft-region-body p {
 			font-size: 2rem;
 		}
 	}
