--- a/templates/Regions/Alert.hbs
+++ b/templates/Regions/Alert.hbs
@@ -1,6 +1,5 @@
 {{#template}}
-<div id="#REGION_STATIC_ID#" class="ab-region alert #REGION_CSS_CLASSES#" role="alert" #REGION_ATTRIBUTES#> <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button> <strong>#TITLE#</strong> #BODY# #SUB_REGIONS#<div class="btn-toolbar" role="toolbar" aria-label="Toolbar"><div class="ab-btn-group" role="group" aria-label="Button Group">#EDIT#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#EXPAND#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#CREATE#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#CREATE2#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#NEXT#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#PREVIOUS#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#CLOSE#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#COPY#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#DELETE#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#CHANGE#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#HELP#</div></div></div>
-
+todo
 {{/template}}
 {{#sub_plug_header_template}}
 
@@ -13,51 +12,9 @@
 {{/sub_plug_template}}
 
 {{#template_option_groups}}
-[
-  {
-    "NAME": "REGION_ALERT_STYLE",
-    "DISPLAY_NAME": "Style",
-    "DISPLAY_SEQUENCE": 1,
-    "HELP_TEXT": "Specify the alert style.",
-    "IS_ADVANCED": "N",
-    "TEMPLATE_OPTIONS": [
-      {
-        "NAME": "ALERT_SUCCESS",
-        "DISPLAY_NAME": "Success",
-        "DISPLAY_SEQUENCE": 1,
-        "CSS_CLASSES": "alert-success"
-      },
-      {
-        "NAME": "ALERT_INFO",
-        "DISPLAY_NAME": "Info",
-        "DISPLAY_SEQUENCE": 2,
-        "CSS_CLASSES": "alert-info"
-      },
-      {
-        "NAME": "ALERT_WARNING",
-        "DISPLAY_NAME": "Warning",
-        "DISPLAY_SEQUENCE": 3,
-        "CSS_CLASSES": "alert-warning"
-      },
-      {
-        "NAME": "ALERT_DANGER",
-        "DISPLAY_NAME": "Danger",
-        "DISPLAY_SEQUENCE": 4,
-        "CSS_CLASSES": "alert-danger"
-      }
-    ]
-  }
-]
+[]
 {{/template_option_groups}}
 
 {{#template_options}}
-[
-  {
-    "NAME": "ALERT_DISMISSIBLE",
-    "DISPLAY_NAME": "Dismissible",
-    "DISPLAY_SEQUENCE": 10,
-    "CSS_CLASSES": "alert-dismissible fade in",
-    "HELP_TEXT": "It’s possible to dismiss any alert inline"
-  }
-]
+[]
 {{/template_options}}
