--- a/templates/Regions/~global.template.options.hbs
+++ b/templates/Regions/~global.template.options.hbs
@@ -10,67 +10,67 @@
 				"name": "REGION_TITLE_SIZE_HIDDEN",
 				"display_name": "Hidden",
 				"display_sequence": 0,
-				"css_classes": "ab-region-title-size-hidden"
+				"css_classes": "ft-region-title-size-hidden"
 			},
 			{
 				"name": "REGION_TITLE_SIZE_D1",
 				"display_name": "Display Heading 1",
 				"display_sequence": 1,
-				"css_classes": "ab-region-title-size-display-1"
+				"css_classes": "ft-region-title-size-display-1"
 			},
 			{
 				"name": "REGION_TITLE_SIZE_D2",
 				"display_name": "Display Heading 2",
 				"display_sequence": 2,
-				"css_classes": "ab-region-title-size-display-2"
+				"css_classes": "ft-region-title-size-display-2"
 			},
 			{
 				"name": "REGION_TITLE_SIZE_D3",
 				"display_name": "Display Heading 3",
 				"display_sequence": 3,
-				"css_classes": "ab-region-title-size-display-3"
+				"css_classes": "ft-region-title-size-display-3"
 			},
 			{
 				"name": "REGION_TITLE_SIZE_D4",
 				"display_name": "Display Heading 4",
 				"display_sequence": 4,
-				"css_classes": "ab-region-title-size-display-4"
+				"css_classes": "ft-region-title-size-display-4"
 			},
 			{
 				"name": "REGION_TITLE_SIZE_H1",
 				"display_name": "Heading 1",
 				"display_sequence": 5,
-				"css_classes": "ab-region-title-size-h1"
+				"css_classes": "ft-region-title-size-h1"
 			},
 			{
 				"name": "REGION_TITLE_SIZE_H2",
 				"display_name": "Heading 2",
 				"display_sequence": 6,
-				"css_classes": "ab-region-title-size-h2"
+				"css_classes": "ft-region-title-size-h2"
 			},
 			{
 				"name": "REGION_TITLE_SIZE_H3",
 				"display_name": "Heading 3",
 				"display_sequence": 7,
-				"css_classes": "ab-region-title-size-h3"
+				"css_classes": "ft-region-title-size-h3"
 			},
 			{
 				"name": "REGION_TITLE_SIZE_H4",
 				"display_name": "Heading 4",
 				"display_sequence": 8,
-				"css_classes": "ab-region-title-size-h4"
+				"css_classes": "ft-region-title-size-h4"
 			},
 			{
 				"name": "REGION_TITLE_SIZE_H5",
 				"display_name": "Heading 5",
 				"display_sequence": 9,
-				"css_classes": "ab-region-title-size-h5"
+				"css_classes": "ft-region-title-size-h5"
 			},
 			{
 				"name": "REGION_TITLE_SIZE_H6",
 				"display_name": "Heading 6",
 				"display_sequence": 10,
-				"css_classes": "ab-region-title-size-h6"
+				"css_classes": "ft-region-title-size-h6"
 			}
 		]
 	},
