--- a/templates/ReportNamedColumns/~global.template.options.hbs
+++ b/templates/ReportNamedColumns/~global.template.options.hbs
@@ -1,26 +1,7 @@
-{
-  "TEMPLATE_OPTIONS": [],
-  "TEMPLATE_OPTION_GROUPS": [
-    {
-      "NAME": "PAGINATION_SIZE",
-      "DISPLAY_NAME": "Pagination size",
-      "DISPLAY_SEQUENCE": 20,
-      "NULL_TEXT": "Default",
-      "IS_ADVANCED": "N",
-      "TEMPLATE_OPTIONS": [
-        {
-          "NAME": "LARGE",
-          "DISPLAY_NAME": "Large",
-          "DISPLAY_SEQUENCE": 1,
-          "CSS_CLASSES": "pagination-lg"
-        },
-        {
-          "NAME": "SMALL",
-          "DISPLAY_NAME": "Small",
-          "DISPLAY_SEQUENCE": 2,
-          "CSS_CLASSES": "pagination-sm"
-        }
-      ]
-    }
-  ]
-}
+{{#template_option_groups}}
+[]
+{{/template_option_groups}}
+
+{{#template_options}}
+[]
+{{/template_options}}
